feat: delete feedback route and swagger
